# python-uv-auto-template

./: README.md  requirements.dev.txt
.github/workflows/: auto_publish.yml  template_test.yml  test.yml
tests/: test_cookie.py
{{cookiecutter.hyphenated}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.hyphenated}}/scripts/: bump_version.py
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/: __init__.py
{{cookiecutter.hyphenated}}/tests/: test_meta.py
