[project]
name = "{{cookiecutter.hyphenated}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_id}}"
Repository = "https://github.com/{{cookiecutter.github_id}}"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pylint>=2.12.2",
    "ruff>=0.4.4",
    "pyright>=1.1",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.underscored}}"]